objects/Candidate__c.object
<CustomObject>
    <fields>
        <fullName>Are_You_Currently_Employed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are You Currently Employed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_you_US_Citizen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are you US Citizen?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_need_Visa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do you need Visa ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HS Diploma</fullName>
                </value>
                <value>
                    <fullName>BA/BS</fullName>
                </value>
                <value>
                    <fullName>MA/MS/MBA</fullName>
                </value>
                <value>
                    <fullName>Ph.D.</fullName>
                </value>
                <value>
                    <fullName>Post Doc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_me_on_Instagram__c</fullName>
        <formula>HYPERLINK(&quot;https://www.instagram.com/&quot;+ username__c ,  IMAGE(&quot;/resource/Instagram&quot;, &quot;follow me&quot;,28,30))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Follow me on Instagram</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operating_System__c</fullName>
        <label>Operating System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Linux</fullName>
                </value>
                <value>
                    <fullName>Mac</fullName>
                </value>
                <value>
                    <fullName>Windows</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Programming_Languages__c</fullName>
        <label>Programming Languages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>C#</fullName>
                </value>
                <value>
                    <fullName>Java</fullName>
                </value>
                <value>
                    <fullName>kotlin</fullName>
                </value>
                <value>
                    <fullName>Python</fullName>
                </value>
                <value>
                    <fullName>Ruby</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <length>50</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Years_Of_Experience__c</fullName>
        <label>Years Of Experience</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <label>username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Candidate</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Candidate Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <recordTypes>
        <fullName>IT_Page_Layout</fullName>
        <active>true</active>
        <label>IT Page Layout</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_IT_Fields_Layout</fullName>
        <active>true</active>
        <label>Non-IT Fields Layout</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Us_Citizen_rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Are_you_US_Citizen__c, Do_you_need_Visa__c)</errorConditionFormula>
        <errorMessage>If you are us citizen no need any any visa requirements.</errorMessage>
    </validationRules>
</CustomObject>